# mikrotools

./: .gitignore  README.md  nasmanager.py  pyproject.toml  requirements.txt  settings.default.yaml  settings.default.yml
config/: __init__.py  configmanager.py  main.py  models.py
hoststools/: backup.py  common.py  upgrade.py
hoststools/models/: mikrotik.py
mikromanager/: __init__.py  mikromanager.py
mikromanager/hoststools/: backup.py  common.py  upgrade.py
mikromanager/netapi/mikrotik/: manager.py
mikromanager/tools/: config.py  ssh.py
netapi/: __init__.py
netapi/mikrotik/: __init__.py  client.py  manager.py
src/mikrotools/: __init__.py  mikromanager.py
src/mikrotools/cli/: options.py  progress.py  utils.py
src/mikrotools/hoststools/: common.py
src/mikrotools/hoststools/models/: operations.py
src/mikrotools/inventory/: factory.py
src/mikrotools/inventory/providers/: __init__.py
src/mikrotools/netapi/mikrotik/: client.py  filters.py  manager.py
src/mikrotools/netapi/mikrotik/models/: system.py
src/mikrotools/plugins/backup/: cli.py  utils.py
src/mikrotools/plugins/execute/: cli.py  utils.py
src/mikrotools/plugins/list_routers/: __init__.py  cli.py  list_routers.py  utils.py
src/mikrotools/plugins/reboot/: cli.py
src/mikrotools/plugins/upgrade/: cli.py  utils.py
src/mikrotools/tools/: config.py  ssh.py
tools/: args.py  colors.py  config.py  outputs.py  ssh.py
