[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mikromanager"
authors = [
    {name = "Maksim Kachur", email = "me@maksimkachur.ru"},
]
description = "Mikrotik manager"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.8",
    "packaging>=24.2",
    "paramiko>=3.3.1",
    "pydantic>=2.10.6",
    "PyYAML>=6.0.1",
    "rich>=13.9.4",
]
dynamic = ["version"]

[project.scripts]
mikromanager = "mikromanager:cli"

[tool.setuptools.dynamic]
version = {attr = "mikromanager.__version__"}
