[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mikrotools"
authors = [
    {name = "Maksim Kachur", email = "me@maksimkachur.ru"},
]
description = "Mikrotik tools"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.8",
    "packaging>=24.2",
    "paramiko>=3.3.1",
    "pydantic>=2.10.6",
    "PyYAML>=6.0.1",
    "rich>=13.9.4",
]
dynamic = ["version"]

[project.scripts]
mikromanager = "mikrotools.mikromanager:cli"

[tool.setuptools.dynamic]
version = {attr = "mikrotools.__version__"}
